Fix post links on mobile layout and reorganize a bit.

--- a/layouts/mobile/style.css
+++ b/layouts/mobile/style.css
@@ -181,15 +181,6 @@
 }
 
 
-.footer {
-	font-size: 0pt;
-}
-
-.footer > a:first-child {
-	font-size: 8pt;
-}
-
-
 @media (min-width: 650px) {
 
 	#body-wrapper {
